sylvia/tests/ui/attributes/payload/invalid_usage.stderr
error: Invalid usage of Sylvia attribute.

         = note: First and second arguments of the method should be `self` and `ctx` respectively.
         = note: Unexpected attribute on `ctx` parameter.

  --> tests/ui/attributes/payload/invalid_usage.rs:22:25
   |
22 |         fn reply(&self, #[sv::payload(raw)] _ctx: ReplyCtx) -> StdResult<Response> {
   |                         ^

error: Missing payload parameter.

         = note: Expected at least one payload parameter at the end of parameter list.

  --> tests/ui/attributes/payload/invalid_usage.rs:22:12
   |
22 |         fn reply(&self, #[sv::payload(raw)] _ctx: ReplyCtx) -> StdResult<Response> {
   |            ^^^^^

error: Invalid usage of Sylvia attribute.

         = note: First and second arguments of the method should be `self` and `ctx` respectively.
         = note: Unexpected attribute on `self` parameter.

  --> tests/ui/attributes/payload/invalid_usage.rs:46:13
   |
46 |             #[sv::payload(raw)] &self,
   |             ^
